commande: 'set' pour définir la version de minecraft